Updated build.gradle for automated update of version number and integration of secrets. Implemented https support.